# CSMonitor

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  TASK.md
examples/: CMakeLists.txt  duonao_monitor.cpp  example_monitor.cpp
include/monitor/: monitor.hpp
src/: file_watcher.hpp  monitor.cpp
tests/: CMakeLists.txt  test_monitor.cpp
